# fritz-ai-local

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  SETUP.md  install.sh  pytest.ini
services/local-brain/: .env.example  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
services/local-brain/fritz_local_brain/: __init__.py  app.py  captures.py  cli.py  compile_workflow.py  config.py  correlation.py  embeddings.py  env_persist.py  indexes.py  ingest_adapters.py  kb_health.py  knowledge.py  knowledge_browse.py  lint_workflow.py  live_fetch.py  llm.py  logs.py  manifests.py  mcp_server.py  mirror.py  models.py  operation_locks.py  paths.py  prompts.py  query_workflow.py  registry.py  rereconciliation.py  run_history.py  scheduler.py  security.py  skill_loader.py  status.py  sync_workflow.py  telemetry.py  usage.py
services/local-brain/tests/: conftest.py  test_agents_registry.py  test_api_routes.py  test_auth.py  test_captures.py  test_cli.py  test_compile_workflow.py  test_config.py  test_config_api.py  test_correlation.py  test_dashboard.py  test_e2e.py  test_embeddings.py  test_indexes.py  test_kb_health.py  test_knowledge_api.py  test_knowledge_page.py  test_knowledge_store.py  test_llm.py  test_mcp_query_telemetry.py  test_mcp_server.py  test_mirror.py  test_mirror_agent.py  test_models.py  test_normalize_front_matter.py  test_operation_locks.py  test_paths.py  test_query_agent.py  test_read_telemetry.py  test_reconciliation.py  test_registry.py  test_render_article.py  test_rereconciliation.py  test_run_persistence.py  test_status.py  (+9 more)
(+116 files in other folders)
