[project]
name = "fritz-local-brain"
version = "0.1.0"
description = "Optional service-mode Local Brain for Fritz Local"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "mcp>=1.10",
  "pydantic>=2.8",
  "pydantic-ai-slim[anthropic,openai]>=1.0",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Hard per-test timeout: a runaway hang (e.g. reading an infinite SSE body via
# TestClient, which never propagates disconnect) becomes a failing test instead
# of an indefinitely-hung merge gate. 60s is far above any real unit test here.
addopts = "--timeout=60"

[project.scripts]
fritz-local-brain = "fritz_local_brain.app:main"
fritz-local-brain-cli = "fritz_local_brain.cli:main"
fritz-brain = "fritz_local_brain.cli:main"
fritz-local-brain-mcp = "fritz_local_brain.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fritz_local_brain"]
